breaking bad code